<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Bienvenido"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="479dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="206dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/usuario"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtusuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="textPassword"
            android:text="@string/clave"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtclave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btningresar"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:background="#08670B"
            android:text="@string/Ingresar"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btncancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9F9F9F"
            android:text="@string/Cancelar"
            android:textColorHint="#FFFFFF" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>