<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#009688"
    tools:context=".SenconActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:background="#2196F3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Operaciones"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/Numero1"
                android:inputType="textPersonName"
                android:textColorHint="#434343" />

            <EditText
                android:id="@+id/edtn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/Numero2"
                android:inputType="textPersonName"
                android:textColorHint="#414242" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnSumar"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#673AB7"
                        android:text="+"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnMul"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#2196F3"
                        android:text="x"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <Button
                        android:id="@+id/btnRestar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#2196F3"
                        android:text="-"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btndiv"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#673AB7"
                        android:text="/"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnMayor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2196F3"
                    android:text=">"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnMcm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2196F3"
                    android:text="@string/Mcm" />

                <Button
                    android:id="@+id/btnMcd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2196F3"
                    android:text="@string/Mcd" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2196F3"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>